# py-ina238

./: .coveragerc  .gitignore  README.md  example_ftdi_usb.py  pyproject.toml
.github/workflows/: build.yml  release.yml
.reuse/: dep5
docs/: conf.py  index.rst
docs/_templates/: versions.html
docs/api/: ti.ina238.rst  ti.rst
src/ti/: __init__.py  ina238.py
tests/: test_ti.py
ti/: __init__.py  ina238.py
