# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum fuer Schwerionenforschung GmbH, Darmstadt, Germany
#
# SPDX-License-Identifier: LGPL-3.0-only

[project]
name = 'ina238'
description = 'Python driver for TI INA238 Power Monitor (https://www.ti.com/product/INA238)'
version = "0.0.2"
authors = [
  { name = 'Dennis Klein', email = 'd.klein@gsi.de' },
  { name = 'Alexey Rybalchenko', email = 'a.rybalchenko@gsi.de' },
  { name = 'Christian Tacke' },
]
license = 'LGPL-3.0-only'
readme = "README.md"
url = 'https://gsi-hpc.github.io/py-ina238'
requires-python = '>=3.6'
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: System :: Hardware :: Hardware Drivers',
  'Topic :: System :: Monitoring',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Intended Audience :: System Administrators',
]
dependencies = []

[project.urls]
Homepage = 'https://gsi-hpc.github.io/py-ina238'
Issues = 'https://github.com/GSI-HPC/py-ina238/issues'
Source = 'https://github.com/GSI-HPC/py-ina238'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
exclude = ['/.github']

[tool.hatch.build.targets.wheel]
packages = ['src/ti']

# test environment
[tool.hatch.envs.test]
dependencies = [
  'coverage[toml]',
  'pytest',
  'pytest-cov',
  'mypy',
  'flake8',
  'pylint',
]

[tool.hatch.envs.test.scripts]
coverage = '''pytest \
  --no-header \
  --cov-report=term-missing:skip-covered \
  --cov-config=pyproject.toml \
  --cov=ti --no-cov-on-fail \
  --cov-fail-under=20
  '''
typechecker = 'mypy --check-untyped-defs ti/'
lint1 = 'flake8 ti/'
lint2 = 'pylint ti/'
all = ['coverage',  'typechecker', 'lint1', 'lint2']
allf = ['- coverage',  '- typechecker', '- lint1', '- lint2']

[[tool.hatch.envs.test.matrix]]
python = ['310', '311']


# docs environment
[tool.hatch.envs.docs]
detached = true
dependencies = [
  'sphinx',
  'sphinx_toolbox',
  'extras_require',
  'sphinxemoji',
  'sphinx-notfound-page',
  'sphinx_copybutton',
  'default_values',
  'toctree_plus',
  'sphinx_debuginfo',
  'sphinx_licenseinfo',
  'html_section',
  'sphinx-rtd-theme',
  'sphinx-multiversion',
]

[tool.hatch.envs.docs.scripts]
build = 'sphinx-multiversion docs docs/build'
serve = 'python3 -m http.server --bind localhost --directory docs/build 8000'
